[package]
name = "testos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.4.5"
x86_64 = "0.14.10"

[lib]
name = "testos"
path = "src/lib/mod.rs"

[[test]]
name = "stack_overflow"
harness = false

[profile.test]
panic = "unwind"
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 300
